# except-me

./: README.md  pyproject.toml  slack.manifest.yml
exceptme/: django.py  logging.py
tests/: test_slackception.py
