[tool.poetry]
name = "exceptme"
version = "0.1.2"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
django = "^5.0.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
